--- a/public/temp.html
+++ b/public/temp.html
@@ -6,35 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-
-    <style>
-        .radial-effect-container {
-            width: 1000px;
-            height: 1000px;
-            background: 
-                
-                /* First radial gradient */
-                radial-gradient(circle at 10% 90%, #453080, transparent 30%),
-                /* Second radial gradient */
-                radial-gradient(circle at 90% 10%, #453080, transparent 30%), black;
-            
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: white;
-            /* Text color for visibility */
-            font-size: 1.2em;
-        }
-    </style>
 </head>
 
 <body>
 
-    <h1>This page is for testing !!!!</h1>
+    <h1 class="text-5xl text-center">Testing</h1>
 
-    <div class="radial-effect-container"></div>
-    Radial Effect Example
+
+    <div class="z-30 fixed text-center text-5xl w-full  border-[2px] border-black mx-1 backdrop-blur-lg">
+        NAVBAR
     </div>
+
+
+    <div class="w-full h-[400px] bg-red-500"></div>
+    <div class="w-full h-[400px] bg-blue-500 backdrop-blur-lg "></div>
+
+    <div class="w-full h-[1000px] bg-yellow-500"></div>
+
 
 
 </body>
