--- a/public/slicehosting.html
+++ b/public/slicehosting.html
@@ -50,7 +50,7 @@
                 <!-- ICON -->
                 <a href="">
                     <div class="flex items-center space-x-2">
-                        <img src="../assets/logo.svg" width="44" height="44" alt="logo">
+                        <img src="/logo.svg" width="44" height="44" alt="logo">
                         <div class="text-lg text-white">Slicehosting</div>
                     </div>
                 </a>
@@ -661,7 +661,7 @@
             <!-- ICON -->
             <a href="" class="mb-1">
                 <div class="flex items-center space-x-2">
-                    <img src="../assets/logo.svg" width="56" height="56" alt="logo">
+                    <img src="/logo.svg" width="56" height="56" alt="logo">
                     <div class="text-xl">Slicehosting</div>
                 </div>
             </a>
